plugins/kotlin/idea/tests/testData/multiplatform/duplicateExpectsWithStrongIncompatibility/right/right.kt
expect fun <!LINE_MARKER("descr='Has actuals in bottom module'")!>foo<!><!NO_ACTUAL_FOR_EXPECT!>(x: Int)<!>: Int
